Fix Wizard dev title on mobile

--- a/app/assets/stylesheets/homepage/_hero.scss
+++ b/app/assets/stylesheets/homepage/_hero.scss
@@ -19,7 +19,7 @@
 
     h1 {
       text-transform: uppercase;
-      font-size: 2.5em;
+      font-size: 1.9em;
       margin-bottom: .3em;
 
       @include media($large-screen) {
